Implemented a new input handler system

--- a/src/TeleCommands.NET.Example/TeleCommands.NET.Example/TeleCommands.NET.Example.csproj
+++ b/src/TeleCommands.NET.Example/TeleCommands.NET.Example/TeleCommands.NET.Example.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\TeleCommands.NET\TeleCommands.NET.csproj" />
+    <ProjectReference Include="..\..\TeleCommands.NET\TeleCommands.NET.API.csproj" />
   </ItemGroup>
 
 </Project>
