--- a/src/TeleCommands.NET/TeleCommands.NET.csproj
+++ b/src/TeleCommands.NET/TeleCommands.NET.csproj
@@ -1,9 +1,17 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\TeleCommands.NET.API\TeleCommands.NET.API.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Console\Handlers\Output\" />
+  </ItemGroup>
 
 </Project>
