--- a/src/TeleCommands.NET/TeleCommands.NET.csproj
+++ b/src/TeleCommands.NET/TeleCommands.NET.csproj
@@ -7,11 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\TeleCommands.NET.API\TeleCommands.NET.API.csproj" />
+    <Compile Remove="Console\**" />
+    <EmbeddedResource Remove="Console\**" />
+    <None Remove="Console\**" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Console\Handlers\Output\" />
+    <ProjectReference Include="..\TeleCommands.NET.API\TeleCommands.NET.API.csproj" />
   </ItemGroup>
 
 </Project>
