Fixed key reading in command reader

--- a/src/TeleCommands.NET/TeleCommands.NET.csproj
+++ b/src/TeleCommands.NET/TeleCommands.NET.csproj
@@ -16,4 +16,8 @@
     <ProjectReference Include="..\TeleCommands.NET.API\TeleCommands.NET.API.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Handlers\Enums\" />
+  </ItemGroup>
+
 </Project>
