--- a/src/TeleCommands.NET.Example/TeleCommands.NET.Example/TeleCommands.NET.Example.csproj
+++ b/src/TeleCommands.NET.Example/TeleCommands.NET.Example/TeleCommands.NET.Example.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -9,6 +9,12 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\TeleCommands.NET\TeleCommands.NET.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="LICENSE.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
